<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arcy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chat_client_title">Chat Client</string>
    <string name="chat_server_title">Server Setup</string>
    <string name="file_save_prompt">Type here to save</string>
    <string name="button_save">Save</string>
    <string name="button_retreive">Load</string>
    <string name="prompt_ipaddress">Enter IRC IP Address</string>
    <string name="prompt_port">port number (optional)</string>
    <string name="app_heading">A Simple IRC Server/Client</string>
    <string name="buttontitle_connect">Connect</string>

</resources>
