<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dingohub.arcy.MainActivity" >

    <Button
        android:id="@+id/button_serverinit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/chat_server_title" />

    <Button
        android:id="@+id/button_clientinit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_serverinit"
        android:layout_alignBottom="@+id/button_serverinit"
        android:layout_alignParentLeft="true"
        android:text="@string/chat_client_title" />

    <TextView
        android:id="@+id/textview_loadedtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_filesave"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="No Text Loaded"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_save" />

    <EditText
        android:id="@+id/edittext_filesave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_save"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/file_save_prompt" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_save"
        android:layout_below="@+id/button_save"
        android:layout_marginTop="26dp"
        android:text="@string/button_retreive" />

</RelativeLayout>